[package]
name = "moko-mkl62ba-at-commands"
version = "0.1.0"
edition = "2021"
authors = ["Michael van Niekerk <mike@agri-io.co.za>"]
description = "AT commands for the Moko MKL62BA"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["no_std", "moko", "MKL62BA"]

categories = ["no-std", "embedded"]

[dependencies]
#atat = { git = "https://github.com/mvniekerk/atat.git", commit = "5d0786ca55e8815b021056a490d0b48beb8112a4", branch = "hack-away-res-capacity-check", default-features=false, features = ["derive", "bytes", "hex_str_arrays"] }
atat = { path = "../atat/atat", default-features=false, features = ["derive", "bytes", "hex_str_arrays", "async"] }
#atat_derive = { git = "https://github.com/mvniekerk/atat.git", commit = "5d0786ca55e8815b021056a490d0b48beb8112a4", branch = "hack-away-res-capacity-check" }
atat_derive = { path = "../atat/atat_derive" }
#serde_at = { git = "https://github.com/mvniekerk/atat.git", commit = "5d0786ca55e8815b021056a490d0b48beb8112a4", branch = "hack-away-res-capacity-check" }
serde_at = { path = "../atat/serde_at" }
nb = { version = "1" }
heapless = "0.7"
defmt = { version = "0.3" }

[features]
debug = ["atat/defmt"]
async = ["atat/async"]
default = ["debug", "async"]