[package]
name = "moko-mkl62ba-at-commands"
version = "0.1.0"
edition = "2021"
authors = ["Michael van Niekerk <mike@agri-io.co.za>"]
description = "AT commands and async client for the Moko MKL62BA"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["no_std", "moko", "MKL62BA"]

categories = ["no-std", "embedded"]

[dependencies]
atat = { git = "https://github.com/mvniekerk/atat.git", commit = "9d7a56438e4bdc5f94b7a2b0afa3b2ffd1323ce4",  default-features=false, features = ["derive", "bytes", "hex_str_arrays", "async"] }
atat_derive = { git = "https://github.com/mvniekerk/atat.git", commit = "9d7a56438e4bdc5f94b7a2b0afa3b2ffd1323ce4" }
serde_at = { git = "https://github.com/mvniekerk/atat.git", commit = "9d7a56438e4bdc5f94b7a2b0afa3b2ffd1323ce4", default-features=false, features = ["hex_str_arrays"] }
nb = { version = "1" }
heapless = "0.7"
heapless-bytes = "0.3"
defmt = { version = "0.3", optional = true }
embedded-io = { version = "0.4.0", optional = true }

[features]
debug = ["atat/defmt", "defmt"]
async = ["atat/async", "embedded-io"]
default = ["debug", "async"]